[project]
name = "pubmed-fetcher"
version = "0.1.0"
description = ""
authors = [
    {name = "SurajKumar2235",email = "75769431+SurajKumar2235@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "pubmed_fetcher", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
